--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,6 @@
 \documentclass{article}
 \usepackage[utf8]{inputenc}
+\usepackage[margin=1.0in]{geometry}
 
 \title{ALEPH Jet-based Analysis Note}
 \author{Yi Chen + others}
